--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="container text-center">
         <!-- Solo el botón aparece al principio, centrado en el medio de la pantalla -->
-        <button class="btn" onclick="mostrarFlores()">🌻 Presióname 🌻</button>
+        <button class="btn" onclick="mostrarFlores()">🌻 Presióna 🌻</button>
 
         <!-- Elementos ocultos hasta presionar el botón -->
         <h1 class="text-center" style="display: none;">❤️ TE AMO ❤️</h1>
